# claude-auto-dev

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: models.yaml
docs/: AGENT_ORCHESTRATOR_SPEC.md  CODE_RAG_QUICKSTART.md  COMPETITIVE_ANALYSIS.md  HYBRID_INTEGRATION_PLAN.md  LOCAL_SWARM_PLAN.md  SETUP.md  architecture.md  embedding_models.md
skills/: auto-dev-local.md  auto-dev.md
src/: __init__.py  cli.py  main.py
src/chunking/: ast_chunker.py
src/context/: context_assembler.py
src/indexing/: incremental_indexer.py  qdrant_schema.py
src/integrations/: __init__.py  code_context.py  git_integration.py  mcp_client.py  serena_integration.py
src/orchestrator/: __init__.py  agent_router.py  executor.py  main_orchestrator.py  model_router.py  task_parser.py
src/quality_gates/: __init__.py  base.py  coverage_checker.py  linter.py  orchestrator.py  security_scanner.py  test_runner.py
src/search/: hybrid_search.py
tests/: __init__.py  test_integrations.py
